<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dominox.clinicapp.ui.screens.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_appointmentsFragment"
            app:destination="@id/appointmentsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_medicalHistoryFragment"
            app:destination="@id/medicalHistoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_doctorsListFragment"
            app:destination="@id/doctorsListFragment" />
    </fragment>

    <fragment
        android:id="@+id/appointmentsFragment"
        android:name="com.dominox.clinicapp.ui.screens.appointments.AppointmentsFragment"
        android:label="@string/appointments_title" >
        <action
            android:id="@+id/action_appointmentsFragment_to_doctorsListFragment"
            app:destination="@id/doctorsListFragment" />
    </fragment>

    <fragment
        android:id="@+id/medicalHistoryFragment"
        android:name="com.dominox.clinicapp.ui.screens.history.MedicalHistoryFragment"
        android:label="@string/history_title" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.dominox.clinicapp.ui.screens.settings.SettingsFragment"
        android:label="@string/settings_title">
        <action
            android:id="@+id/action_settingsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.dominox.clinicapp.ui.screens.settings.ProfileFragment"
        android:label="@string/profile_title" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.dominox.clinicapp.ui.screens.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_adminDashboardFragment"
            app:destination="@id/adminDashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.dominox.clinicapp.ui.screens.register.RegisterFragment"
        android:label="RegisterFragment" >
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="com.dominox.clinicapp.ui.screens.adminDashboard.AdminDashboardFragment"
        android:label="fragment_admin_dashboard"
        tools:layout="@layout/fragment_admin_dashboard" >
        <action
            android:id="@+id/action_adminDashboardFragment_to_doctorAppointmentsFragment"
            app:destination="@id/doctorAppointmentsFragment" />
    </fragment>
    <fragment
        android:id="@+id/doctorAppointmentsFragment"
        android:name="com.dominox.clinicapp.ui.screens.adminDashboard.appointments.DoctorAppointmentsFragment"
        android:label="fragment_doctor_appointments"
        tools:layout="@layout/fragment_doctor_appointments" />
    <fragment
        android:id="@+id/doctorsListFragment"
        android:name="com.dominox.clinicapp.ui.screens.appointments.DoctorsListFragment"
        android:label="DoctorsListFragment" >
        <action
            android:id="@+id/action_doctorsListFragment_to_doctorDetailsFragment"
            app:destination="@id/doctorDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/doctorDetailsFragment"
        android:name="com.dominox.clinicapp.ui.screens.appointments.DoctorDetailsFragment"
        android:label="DoctorDetailsFragment">
        <argument
            android:name="doctorId"
            app:argType="integer" />
        <argument
            android:name="doctorName"
            app:argType="string" />
        <argument
            android:name="doctorSpecialization"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>
